add static path

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -10,6 +10,7 @@ module=efunds.wsgi:application
 workers=4
 threads=1
 vacuum=True
+static-map= /static=/usr/src/efundsapi/static
 
 log-maxsize=51200000
 max-requests=5000
