fix bug on api prefix path

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -10,7 +10,7 @@ module=efunds.wsgi:application
 workers=4
 threads=1
 vacuum=True
-static-map= /static=/usr/src/efundsapi/static
+static-map= /{app_name}/static=/usr/src/efundsapi/static
 
 log-maxsize=51200000
 max-requests=5000
@@ -18,5 +18,5 @@ max-requests=5000
 logger=file:/var/log/efundsapi/api.log
 req-logger=file:/var/log/efundsapi/access.log
 logformat=%(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)" %(micros)
-log-x-forwarded-for=True
-log-master=True
+log-x-forwarded-for=true
+log-master=true
