add path env to optimize prefix path

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -10,13 +10,13 @@ module=efunds.wsgi:application
 workers=4
 threads=1
 vacuum=True
-static-map= /{app_name}/static=/usr/src/efundsapi/static
+static-map= /$(APP_NAME)/static=/usr/src/efundsapi/static
 
 log-maxsize=51200000
 max-requests=5000
 
-logger=file:/var/log/efundsapi/api.log
-req-logger=file:/var/log/efundsapi/access.log
+;logger=file:/var/log/efundsapi/api.log
+;req-logger=file:/var/log/efundsapi/access.log
 logformat=%(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)" %(micros)
 log-x-forwarded-for=true
 log-master=true
